--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,24 @@
 .read-the-docs {
   color: #888;
 }
+
+
+.listing-cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card {
+  flex-basis: 30%;
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 225px;
+  height: 225px;
+}
+
+.card img {
+  height: 135px;
+}
